Banner Section Work in Progress

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,2 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap');
 *{font-family: 'Poppins', sans-serif;}
+.banner-section{
+    background: linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)), url('../images/banner_1.png') no-repeat;
+}
